# career-ops

./: .gitignore  .npmrc  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
.planning/: AUTH.md  FRONTEND_TODO_INTERVIEWER_UTTERANCE.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  SHIP-CHECKLIST.md  STATE.md  STRIPE-SETUP.md  STRIPE.md  WORKER_TODO_STT.md
.planning/audit/2026-05-05/: SUMMARY.md  backend.md  infra.md  performance.md  reality.md  security.md
.planning/copilot/: TEST-PLAN.md
.planning/marketing/: BETA-INVITE.md  BETA-LAUNCH-FLOW.md  DEMO-VIDEO.md  DEPLOY.md  PLAYBOOK-FR.md  STRATEGY.md
.planning/marketing/emails/: README.md  build.sh
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/sprints/: 2026-05-04-audit-roast.md  2026-05-04-copilot-phase-1-audio.md  2026-05-04-copilot-phase-2-stt.md  2026-05-04-copilot-phase-3-context.md  2026-05-04-copilot-phase-4-llm.md  2026-05-04-copilot-phase-5-overlay.md  2026-05-04-copilot-phase-6-reliability.md  2026-05-04-job-ingestion.md  2026-05-04-job-teaser-sso.md  BACKLOG.md  MICRO-SPRINTS.md
brand/: README.md
landing/: .env.example  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
landing/public/: a-propos.html  privacy.md  robots.txt  sitemap.xml  terms.md
landing/public/assets/: README.md
landing/public/blog/: comment-rentrer-chez-bain.html  cv-qui-passe-ats-top-firms.html  index.html  page.css  preparation-entretien-cas-mbb.html
landing/public/legal/: cgu.html  confidentialite.html  cookies.html  mentions-legales.html  page.css
landing/src/: App.tsx  main.tsx  vite-env.d.ts
landing/src/components/: BeforeAfter.tsx  BetaCTA.tsx  Demo.tsx  DemoModal.tsx  Features.tsx  Footer.tsx  Header.tsx  Hero.tsx  HowItWorks.tsx  InstallHelp.tsx  Privacy.tsx  Results.tsx  Testimonials.tsx  ThemeToggle.tsx  TrustBar.tsx
landing/src/hooks/: useReveal.ts
landing/src/lib/: theme.ts  waitlist.ts
landing/src/styles/: landing.css  reset.css  tokens.css
remotion/: README.md  package.json  pnpm-lock.yaml  remotion.config.ts  tsconfig.json
remotion/data/: week-01.json
remotion/scripts/: batch.ts
remotion/src/: Root.tsx
remotion/src/components/: Backdrop.tsx  BrandTag.tsx  Outro.tsx
remotion/src/compositions/: ATSReveal.tsx  HotTake.tsx  LandingDemo.tsx  ListeRapide.tsx  VeriteMarche.tsx
remotion/src/lib/: easing.ts  theme.ts
src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: default.json  jobteaser.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_job_ingestion.sql  0003_stripe.sql  0004_copilot_conversations.sql
src-tauri/src/: audio.rs  audio_capture_sck.rs  audio_tap.rs  audio_tap.rs.full-impl.bak  billing.rs  cloud.rs  latex.rs  lib.rs  llm.rs  main.rs  pdf.rs  secrets.rs  session.rs  state.rs  stt.rs  vad.rs
src-tauri/src/ai/: anthropic.rs  mod.rs  types.rs
src-tauri/src/ai/prompts/: ats.rs  mod.rs  next_steps.rs  optimize.rs  profile.rs
src-tauri/src/commands/: db.rs  mod.rs
src-tauri/src/db/: application.rs  copilot_conversation.rs  cv.rs  error.rs  ingest.rs  integration.rs  interview.rs  job.rs  mod.rs  models.rs  prep.rs  subscription.rs  tests.rs  timeline.rs  user.rs
src-tauri/src/ingest/: ashby.rs  builtin_sources.rs  greenhouse.rs  lever.rs  mod.rs  normalize.rs  traits.rs  ycombinator.rs
src-tauri/src/ingest/jobteaser/: auth.rs  auth_bridge.js  mod.rs  scrape.rs
src-tauri/templates/: cv-template.tex
src/copilot/: CopilotApp.tsx
src/dashboard/: DashboardApp.tsx  navigation.tsx
src/dashboard/components/: AnalyzerStatusPill.tsx  CompanyAvatar.tsx  InsightCard.tsx  Pipeline.tsx  PipelineCard.tsx  PipelineColumn.tsx  Sidebar.tsx  StatCard.tsx  StatsRow.tsx  TaskItem.tsx  TodayTasks.tsx  TodaysFocusCard.tsx  TopBar.tsx  UserAvatar.tsx
src/dashboard/data/: applications.ts  companyMeta.ts  copilot.ts  cv.ts  demoSeed.ts  jobs.ts  mock.ts  prep.ts  settings.ts
src/dashboard/hooks/: useAdaptivePrepTrack.ts  useAnthropicKey.ts  useApplyAppearance.ts  useAudioDevices.ts  useAuthDeepLink.ts  useAutoUpdate.ts  useAutostart.ts  useBillingDeepLink.ts  useBillingHydrate.ts  useBillingUsage.ts  useCopilotSession.ts  useDashboardInsight.ts  useDashboardStats.ts  useJobTeaserAuthListener.ts  usePlanGate.ts  usePrepStreak.ts  useSeedIngestSources.ts  useSpeechRecognition.ts  useTodaysFocus.ts
src/dashboard/lib/: account.ts  ai.ts  aiClient.ts  applicationNextSteps.ts  auth.ts  billing.ts  computeMatch.ts  copilotToken.ts  feedback.ts  ingest.ts  ingestDb.ts  jobTrack.ts  jobteaser.ts  notificationSound.ts  optimize.ts  pdf.ts  polishProfile.ts  prepBank.ts  runAnalyzer.ts  secrets.ts  stripe.ts  teleprompterMatch.ts
src/dashboard/pages/: Applications.tsx  CV.tsx  Copilot.tsx  Dashboard.tsx  Jobs.tsx  Prep.tsx  Settings.tsx  Workspace.tsx
src/dashboard/primitives/: CommandPalette.tsx  ConfirmDialog.tsx  Drawer.tsx  DropdownMenu.tsx  Modal.tsx  Toast.tsx  index.ts  portal.ts  useFocusTrap.ts
src/dashboard/store/: index.ts  types.ts  utils.ts
src/dashboard/styles/: applications.css  copilot-teleprompter.css  copilot.css  cv.css  insight.css  interactive.css  jobs.css  onboarding.css  paywall.css  pipeline.css  prep.css  primitives.css  responsive.css  settings.css  shared.css  sidebar.css  stats.css  tasks.css  tokens.css  topbar.css  workspace.css
src/dashboard/utils/: csv.ts
src/teleprompter/: TeleprompterApp.tsx
worker/: .dev.vars.example  .gitignore  package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
worker/migrations/: 0001_init.sql  0002_ai_usage.sql  0003_billing.sql
worker/src/: index.ts  types.ts
worker/src/lib/: anthropic.ts  db.ts  email.ts  jwt.ts  rateLimit.ts  token.ts
worker/src/middleware/: requireAuth.ts
worker/src/routes/: ai.ts  auth.ts  billing.ts  copilot.ts  health.ts  me.ts  (+1 more)
(+175 files in other folders)
