[package]
name = "interview-copilot"
version = "0.0.1"
description = "Stealth Mac overlay for live job interviews"
authors = ["Gabriel"]
edition = "2021"

[lib]
name = "interview_copilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "multipart"] }
cpal = "0.15"
hound = "3.5"
anyhow = "1"
thiserror = "2"
futures-util = "0.3"
bytes = "1"
async-trait = "0.1"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pdf-extract = "0.7"
base64 = "0.22"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
http = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
