[package]
name = "career-ops"
version = "0.0.5"
description = "Career operating system for top-firm job hunting — dashboard, war room, CV manager, prep, and stealth live copilot"
authors = ["Gabriel"]
edition = "2021"

[lib]
name = "career_ops_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "devtools"] }
# Cocoa direct calls (macOS only) — needed for `NSApp.activate()` after
# `setActivationPolicy` swaps. Tauri exposes the policy setter but not
# the activate kick, and the Dock won't refresh on Accessory→Regular
# without it.
[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Audit 2026-05-05 backend MEDIUM #10.2: tokio = "full" pulled signal
# + net we don't use. Tightened to the actual surface (rt-multi-thread
# + macros for #[tokio::main]/#[tokio::test], sync/time/process/fs/io-util
# for the audio + ingest paths).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "fs", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "multipart"] }
cpal = "0.15"
hound = "3.5"
anyhow = "1"
thiserror = "2"
futures-util = "0.3"
bytes = "1"
async-trait = "0.1"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pdf-extract = "0.7"
base64 = "0.22"
# Phase 2 — Core Audio Tap deps TEMPORARILY DISABLED until Xcode lands.
# `cidre` requires the full Xcode toolchain (its build script runs
# `xcodebuild` to compile its `pomace/` Objective-C bridges), and this
# machine currently only has Command Line Tools. The user is downloading
# Xcode from the App Store; once `xcode-select -p` points at
# `/Applications/Xcode.app/Contents/Developer`, uncomment these two
# lines AND restore `src-tauri/src/audio_tap.rs` from its `.full-impl.bak`
# sibling (see the stub's module doc for the full restore checklist).
# Until then `audio_tap.rs` is a stub that errors out on use, and
# session.rs/audio.rs gracefully fall back to the legacy cpal loopback.
ringbuf = "0.4"
cidre = "0.11"
# Used by `pdf::profile` for regex-based contact extraction
# (email / phone / LinkedIn / GitHub / portfolio) when the user
# uploads a CV during onboarding. Compiled-once statics live in
# `pdf::profile`; runtime allocation is zero per call.
regex = "1"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
http = "1"
# Audit 2026-05-05 backend #6.1 recommended dropping the `macros`
# feature since the codebase uses 100% runtime queries — but the
# `#[derive(sqlx::FromRow)]` impls also live in `macros`, so dropping
# breaks 70+ trait bounds across `db/*`. Keeping it. (We still avoid
# the `query!` / `query_as!` macro forms — those would need a live
# DATABASE_URL or sqlx-prepare cache that we can't ship.)
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "sqlite", "macros", "migrate", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
keyring = { version = "3", features = ["apple-native"] }
tauri-plugin-autostart = "2.5.1"
# Tauri 2 deep-link plugin: registers the `careeros://` URL scheme
# at install time + emits an event in-process when the OS routes a
# matching URL to the running app. Drives the auth magic-link
# callback (`careeros://auth/callback#jwt=…`).
tauri-plugin-deep-link = "2"
# Auto-updater plugin — checks the endpoint declared in
# `tauri.conf.json::plugins.updater.endpoints` for a newer
# version's `latest.json` manifest, downloads + verifies the DMG
# signature against the public key, then prompts the user.
# Required signing keypair generated via `pnpm tauri signer
# generate -- -w ~/.tauri/career-os.key`.
tauri-plugin-updater = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
